[package]
name = "async-unsync"
description = "asynchronous, unsynchronized (thread-local) channels and semaphores"
version = "0.1.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
repository = "https://github.com/oliver-giersch/async-unsync.git"
categories = ["asynchronous", "concurrency", "data-structures", "no-std"]
keywords = ["async", "futures", "no_std"]
edition = "2021"
exclude = [".github"]

[features]
default = ["std"]
std = []

[dev-dependencies]
futures-lite = "1.12.0"
