[package]
name = "async-unsync"
description = "asynchronous, unsynchronized (thread-local) channels and semaphores"
version = "0.3.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
repository = "https://github.com/oliver-giersch/async-unsync.git"
categories = ["asynchronous", "concurrency", "data-structures", "no-std"]
keywords = ["async", "futures", "no_std"]
edition = "2021"
exclude = [".github"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

# only for benchmarking
bench = ["tokio"]

[dev-dependencies]
futures-lite = "2.2.0"

[dependencies.tokio]
version = "1.36.0"
features = ["rt", "rt-multi-thread", "sync"]
optional = true
